# balance_ladder

./: .gitignore  README.md  app.js  index.html  styles.css  sw.js
.github/workflows/: pages.yml
docs/: README.md
docs/debug/: README.md  app.js  index.html  manifest.webmanifest  styles.css  sw.js
hardware/: README.md  balanceladder_2026-06-09.epro
images/: README.md
report/: 平衡梯硬件方案调研.md
software/: CMakeLists.txt  README.md  sdkconfig.defaults
software/main/: CMakeLists.txt  app_main.cpp  app_state.cpp  app_state.h  balance_controller.cpp  balance_controller.h  ble_debug.cpp  ble_debug.h  board_pins.h  imu_mpu6050.cpp  imu_mpu6050.h  motor_drv8837.cpp  motor_drv8837.h  status_led.cpp  status_led.h  ui_oled.cpp  ui_oled.h
